--- a/surveyClean.Rmd
+++ b/surveyClean.Rmd
@@ -240,12 +240,12 @@ work2004 <- work2004 %>% mutate(WorthlessBin = case_when(
   work2004$V2394 == "(1) Yes" ~ 1,
   work2004$V2394 == "(2) No" ~ 0
 ))
-work2004 <-work2004 %>% mutate(MentalHealthScoreLeniant = NervousBin + HopelessBin + RestlessBin + DepressBin + EffortBin + WorthlessBin  
+work2004 <-work2004 %>% mutate(MentalHealthScorelenient = NervousBin + HopelessBin + RestlessBin + DepressBin + EffortBin + WorthlessBin  
 )
 ```
 
 ```{r}
-#Convert the mental health screaner responses to binary, with some to all of the time being 1 and a little to none of the time being zero, and then summing them to create leniant health score
+#Convert the mental health screaner responses to binary, with some to all of the time being 1 and a little to none of the time being zero, and then summing them to create lenient health score
 
 work2016 <-work2016 %>% mutate(NervousBin = case_when(
   work2016$V1179 == "(1) 1 = All of the Time" ~ 1,
@@ -289,7 +289,7 @@ work2016 <-work2016 %>% mutate(WorthlessBin = case_when(
   work2016$V1184 == "(4) 4 = A Little of the Time" ~ 0,
   work2016$V1184 == "(5) 5 = None of the Time" ~ 0
 ))
-work2016 <-work2016 %>% mutate(MentalHealthScoreLeniant = NervousBin + HopelessBin + RestlessBin + DepressBin + EffortBin + WorthlessBin  
+work2016 <-work2016 %>% mutate(MentalHealthScorelenient = NervousBin + HopelessBin + RestlessBin + DepressBin + EffortBin + WorthlessBin  
 )
 ```
 
@@ -410,21 +410,21 @@ cbind((workCont2004 %>% count(Schooling))[1],-(workCont2004 %>% count(Schooling)
 #creates a chart with the breakdown of how many people had what mental health scores in each year and group, one with total count and one with percent of the group
 
 #Count Chart
-MentalChart<-cbind((workCont2016 %>% count(MentalHealthScoreLeniant))[1],
-(workCont2004 %>% count(MentalHealthScoreLeniant))[2],
-(workCont2016 %>% count(MentalHealthScoreLeniant))[2],
-(workCali2004 %>% count(MentalHealthScoreLeniant))[2],
-(workCali2016 %>% count(MentalHealthScoreLeniant))[2]
+MentalChart<-cbind((workCont2016 %>% count(MentalHealthScorelenient))[1],
+(workCont2004 %>% count(MentalHealthScorelenient))[2],
+(workCont2016 %>% count(MentalHealthScorelenient))[2],
+(workCali2004 %>% count(MentalHealthScorelenient))[2],
+(workCali2016 %>% count(MentalHealthScorelenient))[2]
 ) 
 
 #Percent Chart
 colnames(MentalChart)[2:5] <- c("2004 Control", "2016 Control","2004 California", "2016 California")
 MentalChart
-MentalChartPerc<-cbind((workCont2016 %>% count(MentalHealthScoreLeniant))[1],
-(workCont2004 %>% count(MentalHealthScoreLeniant))[2]/2835,
-(workCont2016 %>% count(MentalHealthScoreLeniant))[2]/3442,
-(workCali2004 %>% count(MentalHealthScoreLeniant))[2]/1757,
-(workCali2016 %>% count(MentalHealthScoreLeniant))[2]/1375
+MentalChartPerc<-cbind((workCont2016 %>% count(MentalHealthScorelenient))[1],
+(workCont2004 %>% count(MentalHealthScorelenient))[2]/2835,
+(workCont2016 %>% count(MentalHealthScorelenient))[2]/3442,
+(workCali2004 %>% count(MentalHealthScorelenient))[2]/1757,
+(workCali2016 %>% count(MentalHealthScorelenient))[2]/1375
 )
 
 #Rename Columns 
@@ -443,12 +443,12 @@ workCali2016 <- workCali2016 %>% mutate(Year = "2016", Treatment = 1)
 ```{r}
 #Select the matching named variables for all the data frames
 
-mergeCali2004 <- workCali2004 %>% dplyr::select("V1057","Race","AgeCat","Marriage", "Schooling", "Veteran", "MentalHealthScoreLeniant", "MentalHealthScoreStrict", "Year", "Treatment")
-mergeCont2004 <- workCont2004 %>% dplyr::select("V1057","Race","AgeCat","Marriage", "Schooling", "Veteran", "MentalHealthScoreLeniant", "MentalHealthScoreStrict", "Year", "Treatment")
-mergeCont2016 <- workCont2016 %>% dplyr::select("V0772","RV0003","RV0002","RV0051", "RV0054", "RV0008", "MentalHealthScoreLeniant", "MentalHealthScoreStrict", "Year", "Treatment")
-colnames(mergeCont2016) <- c("V1057","Race","AgeCat","Marriage", "Schooling", "Veteran", "MentalHealthScoreLeniant", "MentalHealthScoreStrict", "Year", "Treatment")
-mergeCali2016 <- workCali2016 %>% dplyr::select("V0772","RV0003","RV0002","RV0051", "RV0054", "RV0008", "MentalHealthScoreLeniant", "MentalHealthScoreStrict", "Year", "Treatment")
-colnames(mergeCali2016) <- c("V1057","Race","AgeCat","Marriage", "Schooling", "Veteran", "MentalHealthScoreLeniant", "MentalHealthScoreStrict", "Year", "Treatment")
+mergeCali2004 <- workCali2004 %>% dplyr::select("V1057","Race","AgeCat","Marriage", "Schooling", "Veteran", "MentalHealthScorelenient", "MentalHealthScoreStrict", "Year", "Treatment")
+mergeCont2004 <- workCont2004 %>% dplyr::select("V1057","Race","AgeCat","Marriage", "Schooling", "Veteran", "MentalHealthScorelenient", "MentalHealthScoreStrict", "Year", "Treatment")
+mergeCont2016 <- workCont2016 %>% dplyr::select("V0772","RV0003","RV0002","RV0051", "RV0054", "RV0008", "MentalHealthScorelenient", "MentalHealthScoreStrict", "Year", "Treatment")
+colnames(mergeCont2016) <- c("V1057","Race","AgeCat","Marriage", "Schooling", "Veteran", "MentalHealthScorelenient", "MentalHealthScoreStrict", "Year", "Treatment")
+mergeCali2016 <- workCali2016 %>% dplyr::select("V0772","RV0003","RV0002","RV0051", "RV0054", "RV0008", "MentalHealthScorelenient", "MentalHealthScoreStrict", "Year", "Treatment")
+colnames(mergeCali2016) <- c("V1057","Race","AgeCat","Marriage", "Schooling", "Veteran", "MentalHealthScorelenient", "MentalHealthScoreStrict", "Year", "Treatment")
 ```
 
 ```{r}
@@ -457,7 +457,7 @@ MergedSurvey <- rbind(mergeCali2004, mergeCont2004, mergeCali2016, mergeCont2016
 ```
 ```{r}
 #Removed NAs from the data frame
-MergedSurvey <- MergedSurvey %>% filter(Race != "(9) 9 = Uncategorized - Missing" & Schooling != "(9) 9 = Missing" & Marriage != "(98) 98 = DK/REF" & AgeCat != "(99) 99 = Blank" & Veteran != "(98) 98 = DK/REF" & is.na(MentalHealthScoreLeniant)==F)
+MergedSurvey <- MergedSurvey %>% filter(Race != "(9) 9 = Uncategorized - Missing" & Schooling != "(9) 9 = Missing" & Marriage != "(98) 98 = DK/REF" & AgeCat != "(99) 99 = Blank" & Veteran != "(98) 98 = DK/REF" & is.na(MentalHealthScorelenient)==F)
 ```
 
 ```{r}
@@ -467,10 +467,10 @@ MergedSurvey <- MergedSurvey %>% mutate(Race = droplevels(Race),
                                         Marriage = droplevels(Marriage), 
                                         AgeCat= droplevels(AgeCat),
                                         Veteran =droplevels(Veteran), 
-                                        factorLeniant = as.factor(MentalHealthScoreLeniant), 
+                                        factorlenient = as.factor(MentalHealthScorelenient), 
                                         factorStrict = as.factor(MentalHealthScoreStrict))
 #Ordered the mental health score 
-MergedSurvey$factorLeniant <- factor(MergedSurvey$factorLeniant, levels = c(0,1,2,3,4,5,6),ordered=T)
+MergedSurvey$factorlenient <- factor(MergedSurvey$factorlenient, levels = c(0,1,2,3,4,5,6),ordered=T)
 MergedSurvey$factorStrict <- factor(MergedSurvey$factorStrict, levels = c(0,1,2,3,4,5,6),ordered=T)
 ```
 
@@ -478,8 +478,8 @@ MergedSurvey$factorStrict <- factor(MergedSurvey$factorStrict, levels = c(0,1,2,
 
 ```{r}
 #ran a simple lm to see the relationship between race and mental health
-lm(MentalHealthScoreLeniant ~ Race*Year, MergedSurvey) %>% summary
-lm(MentalHealthScoreLeniant ~ Race+Year, MergedSurvey) %>% summary
+lm(MentalHealthScorelenient ~ Race*Year, MergedSurvey) %>% summary
+lm(MentalHealthScorelenient ~ Race+Year, MergedSurvey) %>% summary
 ```
 
 
@@ -502,38 +502,38 @@ lm(MentalHealthScoreStrict~Year + Treatment +Year*Treatment + Race + Schooling +
 ```
 
 ```{r}
-#Run linear models to look at relaationships between variables and leniant mental health score
-lm(MentalHealthScoreLeniant~Year + Treatment +Year*Treatment, MergedSurvey) %>% summary() #Year and Treatment, some redundant variables in there
-lm(MentalHealthScoreLeniant~Year + Treatment +Year*Treatment + Race + Schooling, MergedSurvey) %>% summary() # Year, treatment, race, and education
-lm(MentalHealthScoreLeniant~Year + Treatment +Year*Treatment + Race + Schooling + AgeCat + Marriage + Veteran, MergedSurvey) %>% summary() #Year, treatment, race, education, age, marriage, and veteran
-lm(MentalHealthScoreLeniant~Year + Treatment +Year*Treatment + Race + Schooling + AgeCat, MergedSurvey) %>% summary()#year, treatment, race, education, age
+#Run linear models to look at relaationships between variables and lenient mental health score
+lm(MentalHealthScorelenient~Year + Treatment +Year*Treatment, MergedSurvey) %>% summary() #Year and Treatment, some redundant variables in there
+lm(MentalHealthScorelenient~Year + Treatment +Year*Treatment + Race + Schooling, MergedSurvey) %>% summary() # Year, treatment, race, and education
+lm(MentalHealthScorelenient~Year + Treatment +Year*Treatment + Race + Schooling + AgeCat + Marriage + Veteran, MergedSurvey) %>% summary() #Year, treatment, race, education, age, marriage, and veteran
+lm(MentalHealthScorelenient~Year + Treatment +Year*Treatment + Race + Schooling + AgeCat, MergedSurvey) %>% summary()#year, treatment, race, education, age
 ```
 
 
 ```{r}
-#created plots that compare changes in mental health scores for the strict and leniant interpretations of the mental health scores
+#created plots that compare changes in mental health scores for the strict and lenient interpretations of the mental health scores
 MergedSurvey %>% ggplot(aes(x=MentalHealthScoreStrict)) +
   geom_bar(na.rm=T) +
   facet_wrap(vars(Year,Treatment))
-MergedSurvey %>% ggplot(aes(x=MentalHealthScoreLeniant)) +
+MergedSurvey %>% ggplot(aes(x=MentalHealthScorelenient)) +
   geom_bar(na.rm=T) +
   facet_wrap(vars(Year,Treatment))
 ```
 
 ```{r}
 #Our Diff-in-diff model, but LM
-lm(MentalHealthScoreLeniant ~ Year*Treatment + Year*Race + Year*Schooling + Year*AgeCat+ Year*Marriage + Year*Veteran, MergedSurvey) %>% summary()
+lm(MentalHealthScorelenient ~ Year*Treatment + Year*Race + Year*Schooling + Year*AgeCat+ Year*Marriage + Year*Veteran, MergedSurvey) %>% summary()
 ```
 
 
 ```{r}
-#Ordered logistic regresion using polr from the MASS package, not what we ended up going with
-leniantOLog <- polr(factorLeniant ~ Year*Treatment + Year*Race + Year*Schooling + Year*AgeCat+ Year*Marriage + Year*Veteran, MergedSurvey, Hess =T) #the ordinal model for leniant interpretation
-strictOLog <-polr(factorStrict ~ Year*Treatment + Year*Race + Year*Schooling + Year*AgeCat+ Year*Marriage + Year*Veteran, MergedSurvey, Hess =T) #the ordinal modelfor the strict interpretation
+#Ordered logistic regression using polr from the MASS package, not what we ended up going with
+lenientOLog <- polr(factorlenient ~ Year*Treatment + Year*Race + Year*Schooling + Year*AgeCat+ Year*Marriage + Year*Veteran, MergedSurvey, Hess =T) #the ordinal model for lenient interpretation
+strictOLog <-polr(factorStrict ~ Year*Treatment + Year*Race + Year*Schooling + Year*AgeCat+ Year*Marriage + Year*Veteran, MergedSurvey, Hess =T) #the ordinal model for the strict interpretation
 ```
 ```{r}
 #Summary of the models
-summary(leniantOLog)
+summary(lenientOLog)
 summary(strictOLog)
 ```
 
@@ -549,7 +549,7 @@ sf <- function(y) {
     'Y>=6' = qlogis(mean(y >= 6)))
   }
 
-(s <- with(MergedSurvey, summary(as.numeric(factorLeniant) ~ Year*Treatment + Year*Race + Year*Schooling + Year*AgeCat+ Year*Marriage + Year*Veteran, MergedSurvey, fun=sf)))
+(s <- with(MergedSurvey, summary(as.numeric(factorlenient) ~ Year*Treatment + Year*Race + Year*Schooling + Year*AgeCat+ Year*Marriage + Year*Veteran, MergedSurvey, fun=sf)))
 cbind((s[,5]-s[,4]), (s[,6] - s[,5]), (s[,7]-s[,6]) ,(s[,8]-s[,7]))
 ```
 
@@ -558,37 +558,67 @@ cbind((s[,5]-s[,4]), (s[,6] - s[,5]), (s[,7]-s[,6]) ,(s[,8]-s[,7]))
 plot(s, which=1:7, pch=1:7, xlab='logit', main=' ', xlim=range(s[,4:7]))
 ```
 ```{r}
-#Created separate variables for each level of the ordinal logistic regression
+#Created separate variables for each level of the ordinal logistic regression(lenient, which is what we used for the first analysis)
 MergedSurvey <- MergedSurvey %>%
-  mutate(Y1 =as.factor(if_else(factorLeniant >=1, 1,0 )), 
-         Y2=as.factor(if_else(factorLeniant >=2, 1,0 )), 
-         Y3 = as.factor(if_else(factorLeniant >=3, 1,0 )), 
-         Y4 = as.factor(if_else(factorLeniant >=4, 1,0 )), 
-         Y5 =as.factor(if_else(factorLeniant >=5, 1,0 )), 
-         Y6=as.factor(if_else(factorLeniant >=6, 1,0 )))
+  mutate(Y1 =as.factor(if_else(factorlenient >=1, 1,0 )), 
+         Y2=as.factor(if_else(factorlenient >=2, 1,0 )), 
+         Y3 = as.factor(if_else(factorlenient >=3, 1,0 )), 
+         Y4 = as.factor(if_else(factorlenient >=4, 1,0 )), 
+         Y5 =as.factor(if_else(factorlenient >=5, 1,0 )), 
+         Y6=as.factor(if_else(factorlenient >=6, 1,0 )))
 #Created numerical versions to be extra safe
 MergedSurvey <- MergedSurvey %>%
   mutate(Y1num =if_else(Y1=="1",1,0), 
          Y2num=if_else(Y2=="1",1,0), 
          Y3num = if_else(Y3=="1",1,0), 
          Y4num = if_else(Y4=="1",1,0), 
-         Y5num =if_else(MergedSurvey$Y1=="1",1,0), 
+         Y5num =if_else(Y5=="1",1,0), 
          Y6num=if_else(Y6=="1",1,0))
 ```
 
 ```{r}
+#Created separate variables for each level of the ordinal logistic regression(strict, because I want to compare)
+MergedSurvey <- MergedSurvey %>%
+  mutate(Y1strict = as.factor(if_else(factorStrict >=1, 1,0 )), 
+         Y2strict = as.factor(if_else(factorStrict >=2, 1,0 )), 
+         Y3strict = as.factor(if_else(factorStrict >=3, 1,0 )), 
+         Y4strict = as.factor(if_else(factorStrict >=4, 1,0 )), 
+         Y5strict = as.factor(if_else(factorStrict >=5, 1,0 )), 
+         Y6strict = as.factor(if_else(factorStrict >=6, 1,0 )))
+#Created numerical versions to be extra safe
+MergedSurvey <- MergedSurvey %>%
+  mutate(Y1numStrict =if_else(Y1strict=="1",1,0), 
+         Y2numStrict=if_else(Y2strict=="1",1,0), 
+         Y3numStrict = if_else(Y3strict=="1",1,0), 
+         Y4numStrict = if_else(Y4strict=="1",1,0), 
+         Y5numStrict =if_else(Y5strict=="1",1,0), 
+         Y6numStrict=if_else(Y6strict=="1",1,0))
+```
+
+```{r}
 #This is the full logistic modeling with logical statements to create the binary y variable
-s1<-summary(glm((factorLeniant >=1) ~ Year*Treatment + Year*Race + Year*Schooling + Year*AgeCat+ Year*Marriage + Year*Veteran,family= "binomial", data = MergedSurvey))
-s2<-summary(glm((factorLeniant >=2) ~ Year*Treatment + Year*Race + Year*Schooling + Year*AgeCat+ Year*Marriage + Year*Veteran,family= "binomial", data = MergedSurvey))
-s3<-summary(glm((factorLeniant >=3) ~ Year*Treatment + Year*Race + Year*Schooling + Year*AgeCat+ Year*Marriage + Year*Veteran,family= "binomial", data = MergedSurvey))
-s4<-summary(glm((factorLeniant >=4) ~ Year*Treatment + Year*Race + Year*Schooling + Year*AgeCat+ Year*Marriage + Year*Veteran,family= "binomial", data = MergedSurvey))
-s5<-summary(glm((factorLeniant >=5) ~ Year*Treatment + Year*Race + Year*Schooling + Year*AgeCat+ Year*Marriage + Year*Veteran,family= "binomial", data = MergedSurvey))
-s6<-summary(glm((factorLeniant >=6) ~ Year*Treatment + Year*Race + Year*Schooling + Year*AgeCat+ Year*Marriage + Year*Veteran,family= "binomial", data = MergedSurvey))
+s1<-summary(glm((factorlenient >=1) ~ Year*Treatment + Year*Race + Year*Schooling + Year*AgeCat+ Year*Marriage + Year*Veteran,family= "binomial", data = MergedSurvey))
+s2<-summary(glm((factorlenient >=2) ~ Year*Treatment + Year*Race + Year*Schooling + Year*AgeCat+ Year*Marriage + Year*Veteran,family= "binomial", data = MergedSurvey))
+s3<-summary(glm((factorlenient >=3) ~ Year*Treatment + Year*Race + Year*Schooling + Year*AgeCat+ Year*Marriage + Year*Veteran,family= "binomial", data = MergedSurvey))
+s4<-summary(glm((factorlenient >=4) ~ Year*Treatment + Year*Race + Year*Schooling + Year*AgeCat+ Year*Marriage + Year*Veteran,family= "binomial", data = MergedSurvey))
+s5<-summary(glm((factorlenient >=5) ~ Year*Treatment + Year*Race + Year*Schooling + Year*AgeCat+ Year*Marriage + Year*Veteran,family= "binomial", data = MergedSurvey))
+s6<-summary(glm((factorlenient >=6) ~ Year*Treatment + Year*Race + Year*Schooling + Year*AgeCat+ Year*Marriage + Year*Veteran,family= "binomial", data = MergedSurvey))
+```
+
+
+```{r}
+#The full modeling process, but linear models with the numerical mental health binaries
+lin1<-summary(lm(Y1num~ Year*Treatment + Year*Race + Year*Schooling + Year*AgeCat+ Year*Marriage + Year*Veteran, data = MergedSurvey)) 
+lin2<-summary(lm(Y2num ~ Year*Treatment + Year*Race + Year*Schooling + Year*AgeCat+ Year*Marriage + Year*Veteran, data = MergedSurvey))
+lin3<-summary(lm(Y3num ~ Year*Treatment + Year*Race + Year*Schooling + Year*AgeCat+ Year*Marriage + Year*Veteran, data = MergedSurvey))
+lin4<-summary(lm(Y4num ~ Year*Treatment + Year*Race + Year*Schooling + Year*AgeCat+ Year*Marriage + Year*Veteran, data = MergedSurvey))
+lin5<-summary(lm(Y5num ~ Year*Treatment + Year*Race + Year*Schooling + Year*AgeCat+ Year*Marriage + Year*Veteran, data = MergedSurvey))
+lin6<-summary(lm(Y6num ~ Year*Treatment + Year*Race + Year*Schooling + Year*AgeCat+ Year*Marriage + Year*Veteran, data = MergedSurvey))
 ```
 
 ```{r}
 #The same full logistic modeling but with the variable we created instead
-m1<-summary(glm(Y1 ~ Year*Treatment + Year*Race + Year*Schooling + Year*AgeCat+ Year*Marriage + Year*Veteran,family= "binomial", data = MergedSurvey))
+m1<-summary(glm(Y1 ~ Year*Treatment + Year*Race + Year*Schooling + Year*AgeCat+ Year*Marriage + Year*Veteran,family= "binomial", data = MergedSurvey)) 
 m2<-summary(glm(Y2 ~ Year*Treatment + Year*Race + Year*Schooling + Year*AgeCat+ Year*Marriage + Year*Veteran,family= "binomial", data = MergedSurvey))
 m3<-summary(glm(Y3 ~ Year*Treatment + Year*Race + Year*Schooling + Year*AgeCat+ Year*Marriage + Year*Veteran,family= "binomial", data = MergedSurvey))
 m4<-summary(glm(Y4 ~ Year*Treatment + Year*Race + Year*Schooling + Year*AgeCat+ Year*Marriage + Year*Veteran,family= "binomial", data = MergedSurvey))
@@ -597,13 +627,23 @@ m6<-summary(glm(Y6 ~ Year*Treatment + Year*Race + Year*Schooling + Year*AgeCat+ 
 ```
 
 ```{r}
-#The full modeling process, but linear models with the numerical mental health binaries
-lin1<-summary(lm(Y1num~ Year*Treatment + Year*Race + Year*Schooling + Year*AgeCat+ Year*Marriage + Year*Veteran, data = MergedSurvey))
-lin2<-summary(lm(Y2num ~ Year*Treatment + Year*Race + Year*Schooling + Year*AgeCat+ Year*Marriage + Year*Veteran, data = MergedSurvey))
-lin3<-summary(lm(Y3num ~ Year*Treatment + Year*Race + Year*Schooling + Year*AgeCat+ Year*Marriage + Year*Veteran, data = MergedSurvey))
-lin4<-summary(lm(Y4num ~ Year*Treatment + Year*Race + Year*Schooling + Year*AgeCat+ Year*Marriage + Year*Veteran, data = MergedSurvey))
-lin5<-summary(lm(Y5num ~ Year*Treatment + Year*Race + Year*Schooling + Year*AgeCat+ Year*Marriage + Year*Veteran, data = MergedSurvey))
-lin6<-summary(lm(Y6num ~ Year*Treatment + Year*Race + Year*Schooling + Year*AgeCat+ Year*Marriage + Year*Veteran, data = MergedSurvey))
+#The full modeling process, but linear models with the numerical strict mental health binaries
+strictLin1<-summary(lm(Y1numStrict ~ Year*Treatment + Year*Race + Year*Schooling + Year*AgeCat+ Year*Marriage + Year*Veteran, data=MergedSurvey))
+strictLin2<-summary(lm(Y2numStrict ~ Year*Treatment + Year*Race + Year*Schooling + Year*AgeCat+ Year*Marriage + Year*Veteran, data=MergedSurvey))
+strictLin3<-summary(lm(Y3numStrict ~ Year*Treatment + Year*Race + Year*Schooling + Year*AgeCat+ Year*Marriage + Year*Veteran, data=MergedSurvey))
+strictLin4<-summary(lm(Y4numStrict ~ Year*Treatment + Year*Race + Year*Schooling + Year*AgeCat+ Year*Marriage + Year*Veteran, data=MergedSurvey))
+strictLin5<-summary(lm(Y5numStrict ~ Year*Treatment + Year*Race + Year*Schooling + Year*AgeCat+ Year*Marriage + Year*Veteran, data=MergedSurvey))
+strictLin6<-summary(lm(Y6numStrict ~ Year*Treatment + Year*Race + Year*Schooling + Year*AgeCat+ Year*Marriage + Year*Veteran, data=MergedSurvey))
+```
+
+```{r}
+#The same full logistic modeling but with the strict factor variable
+strict1<-glm(Y1strict ~ Year*Treatment + Year*Race + Year*Schooling + Year*AgeCat+ Year*Marriage + Year*Veteran,family= "binomial", data = MergedSurvey)
+strict2<-glm(Y2strict ~ Year*Treatment + Year*Race + Year*Schooling + Year*AgeCat+ Year*Marriage + Year*Veteran,family= "binomial", data = MergedSurvey)
+strict3<-glm(Y3strict ~ Year*Treatment + Year*Race + Year*Schooling + Year*AgeCat+ Year*Marriage + Year*Veteran,family= "binomial", data = MergedSurvey)
+strict4<-glm(Y4strict ~ Year*Treatment + Year*Race + Year*Schooling + Year*AgeCat+ Year*Marriage + Year*Veteran,family= "binomial", data = MergedSurvey)
+strict5<-glm(Y5strict ~ Year*Treatment + Year*Race + Year*Schooling + Year*AgeCat+ Year*Marriage + Year*Veteran,family= "binomial", data = MergedSurvey)
+strict6<-glm(Y6strict ~ Year*Treatment + Year*Race + Year*Schooling + Year*AgeCat+ Year*Marriage + Year*Veteran,family= "binomial", data = MergedSurvey)
 ```
 
 ```{r} 
@@ -618,30 +658,16 @@ lin6
 
 
 ```{r}
-#manually create data frame with estimates and standard deviations, where 23 is the coefficient and 65 is the standard deviation
-factorResults <- data.frame(Values = c(m1$coefficients[23], m1$coefficients[23] + m1$coefficients[65], m1$coefficients[23] - m1$coefficients[65],
-                                 m2$coefficients[23], m2$coefficients[23] + m2$coefficients[65], m2$coefficients[23] - m2$coefficients[65],
-                                 m3$coefficients[23], m3$coefficients[23] + m3$coefficients[65], m3$coefficients[23] - m3$coefficients[65],
-                                 m4$coefficients[23], m4$coefficients[23] + m4$coefficients[65], m4$coefficients[23] - m4$coefficients[65],
-                                 m5$coefficients[23], m5$coefficients[23] + m5$coefficients[65], m5$coefficients[23] - m5$coefficients[65],
-                                 m6$coefficients[23], m6$coefficients[23] + m6$coefficients[65], m6$coefficients[23] - m6$coefficients[65]),
-                      type= c("Estimate","Std. Error","Std. Error","Estimate","Std. Error","Std. Error","Estimate","Std. Error","Std. Error","Estimate","Std. Error","Std. Error","Estimate","Std. Error","Std. Error","Estimate","Std. Error","Std. Error"), Group = c(">= 1",">= 1",">= 1",
-                                                                                                         ">= 2",">= 2",">= 2",
-                                                                                                         ">= 3",">= 3",">= 3",
-                                                                                                         ">= 4",">= 4",">= 4",
-                                                                                                         ">= 5",">= 5",">= 5",
-                                                                                                         ">= 6",">= 6",">= 6"))
-
-```
-
-```{r}
-results <- data.frame(Values = c(s1$coefficients[23], s1$coefficients[23] + s1$coefficients[65], s1$coefficients[23] - s1$coefficients[65],
-                                 s2$coefficients[23], s2$coefficients[23] + s2$coefficients[65], s2$coefficients[23] - s2$coefficients[65],
-                                 s3$coefficients[23], s3$coefficients[23] + s3$coefficients[65], s3$coefficients[23] - s3$coefficients[65],
-                                 s4$coefficients[23], s4$coefficients[23] + s4$coefficients[65], s4$coefficients[23] - s4$coefficients[65],
-                                 s5$coefficients[23], s5$coefficients[23] + s5$coefficients[65], s5$coefficients[23] - s5$coefficients[65],
-                                 s6$coefficients[23], s6$coefficients[23] + s6$coefficients[65], s6$coefficients[23] - s6$coefficients[65]),
-                      type= c("Estimate","Std. Error","Std. Error","Estimate","Std. Error","Std. Error","Estimate","Std. Error","Std. Error","Estimate","Std. Error","Std. Error","Estimate","Std. Error","Std. Error","Estimate","Std. Error","Std. Error"), Group = c(">= 1",">= 1",">= 1",
+#manually create data frame with estimates and standard deviations, where 23 is the coefficient and 65 is the standard deviation, leaving this cause I realized its better to do it with tidy()
+factorResults <- data.frame(Values = c(m1$coefficients[23], m1$coefficients[23] + qnorm(0.975)*m1$coefficients[65], m1$coefficients[23] - qnorm(0.975)*m1$coefficients[65], 
+                                 m2$coefficients[23], m2$coefficients[23] + qnorm(0.975)*m2$coefficients[65], m2$coefficients[23] - qnorm(0.975)*m2$coefficients[65],
+                                 m3$coefficients[23], m3$coefficients[23] + qnorm(0.975)*m3$coefficients[65], m3$coefficients[23] - qnorm(0.975)*m3$coefficients[65],
+                                 m4$coefficients[23], m4$coefficients[23] + qnorm(0.975)*m4$coefficients[65], m4$coefficients[23] - qnorm(0.975)*m4$coefficients[65],
+                                 m5$coefficients[23], m5$coefficients[23] + qnorm(0.975)*m5$coefficients[65], m5$coefficients[23] - qnorm(0.975)*m5$coefficients[65],
+                                 m6$coefficients[23], m6$coefficients[23] + qnorm(0.975)*m6$coefficients[65], m6$coefficients[23] - qnorm(0.975)*m6$coefficients[65]),
+                      type= c("Estimate","Std. Error","Std. Error","Estimate","Std. Error","Std. Error","Estimate","Std. Error","Std. Error","Estimate","Std. Error","Std. Error","Estimate","Std. Error","Std. Error","Estimate","Std. Error","Std. Error"), Group = c(
+                        
+">= 1",">= 1",">= 1",
                                                                                                          ">= 2",">= 2",">= 2",
                                                                                                          ">= 3",">= 3",">= 3",
                                                                                                          ">= 4",">= 4",">= 4",
@@ -651,11 +677,87 @@ results <- data.frame(Values = c(s1$coefficients[23], s1$coefficients[23] + s1$c
 ```
 
 
+```{r}
+#manually create data frame with estimates and standard deviations, where 23 is the coefficient and 65 is the standard deviation, leaving this cause I realized its better to do it with tidy()
+results <- data.frame(Values = c(s1$coefficients[23], s1$coefficients[23] + qnorm(0.975)*s1$coefficients[65], s1$coefficients[23] - qnorm(0.975)*s1$coefficients[65],
+                                 s2$coefficients[23], s2$coefficients[23] + qnorm(0.975)*s2$coefficients[65], s2$coefficients[23] - qnorm(0.975)*s2$coefficients[65],
+                                 s3$coefficients[23], s3$coefficients[23] + qnorm(0.975)*s3$coefficients[65], s3$coefficients[23] - qnorm(0.975)*s3$coefficients[65],
+                                 s4$coefficients[23], s4$coefficients[23] + qnorm(0.975)*s4$coefficients[65], s4$coefficients[23] - qnorm(0.975)*s4$coefficients[65],
+                                 s5$coefficients[23], s5$coefficients[23] + qnorm(0.975)*s5$coefficients[65], s5$coefficients[23] - qnorm(0.975)*s5$coefficients[65],
+                                 s6$coefficients[23], s6$coefficients[23] + qnorm(0.975)*s6$coefficients[65], s6$coefficients[23] - qnorm(0.975)*s6$coefficients[65]),
+                      type= c("Estimate","Std. Error","Std. Error","Estimate","Std. Error","Std. Error","Estimate","Std. Error","Std. Error","Estimate","Std. Error","Std. Error","Estimate","Std. Error","Std. Error","Estimate","Std. Error","Std. Error"), Group = c(">= 1",">= 1",">= 1",
+                                                                                                         ">= 2",">= 2",">= 2",
+                                                                                                         ">= 3",">= 3",">= 3",
+                                                                                                         ">= 4",">= 4",">= 4",
+                                                                                                         ">= 5",">= 5",">= 5",
+                                                                                                         ">= 6",">= 6",">= 6"))
+```
 
 ```{r}
-ggplot(data=results, aes(y=Values, x = Group, shape =type)) + geom_point(size=5) + labs(title = "Estimated Change in Mental Health Scores", y="Treatment Effect",x="Scores Included in Estimation") + theme_bw() + theme(plot.title = element_text(hjust = 0.5)) + scale_shape_manual(values= c(16,4))
+#created data frame for the lenient linear model 
+gglin1 <- tidy(lin1) %>% mutate(group = ">= 1")
+gglin2 <- tidy(lin2) %>% mutate(group = ">= 2")
+gglin3 <- tidy(lin3) %>% mutate(group = ">= 3")
+gglin4 <- tidy(lin4) %>% mutate(group = ">= 4")
+gglin5 <- tidy(lin5) %>% mutate(group = ">= 5")
+gglin6 <- tidy(lin6) %>% mutate(group = ">= 6") 
+gglin<- rbind(gglin1, gglin2,gglin3,gglin4,gglin5,gglin6)
+#fixed the variables so they plot better
+gglinplot <- gglin %>% filter(term=="Year2016:Treatment")
+gglinplot1 <- gglinplot %>% mutate(value=estimate - qnorm(0.975)*std.error, type = "Confidence Interval")
+gglinplot2 <- gglinplot %>% mutate(value=estimate + qnorm(0.975)*std.error, type = "Confidence Interval")
+gglinplot3 <- gglinplot %>% mutate(value=estimate, type = "Estimate")
+gglinplotfull <- rbind(gglinplot1,gglinplot2,gglinplot3)
+```
+
+```{r}
+#created data frame for the strict linear model 
+gglin1 <- tidy(strictLin1) %>% mutate(group = ">= 1")
+gglin2 <- tidy(strictLin2) %>% mutate(group = ">= 2")
+gglin3 <- tidy(strictLin3) %>% mutate(group = ">= 3")
+gglin4 <- tidy(strictLin4) %>% mutate(group = ">= 4")
+gglin5 <- tidy(strictLin5) %>% mutate(group = ">= 5")
+gglin6 <- tidy(strictLin6) %>% mutate(group = ">= 6") 
+gglin<- rbind(gglin1, gglin2,gglin3,gglin4,gglin5,gglin6)
+#fixed the variables so they plot better
+gglinplot <- gglin %>% filter(term=="Year2016:Treatment")
+gglinplot1 <- gglinplot %>% mutate(value=estimate - qnorm(0.975)*std.error, type = "Confidence Interval")
+gglinplot2 <- gglinplot %>% mutate(value=estimate + qnorm(0.975)*std.error, type = "Confidence Interval")
+gglinplot3 <- gglinplot %>% mutate(value=estimate, type = "Estimate")
+strictgglinplotfull <- rbind(gglinplot1,gglinplot2,gglinplot3)
+```
+
+```{r}
+#created data frame for the strict logistic model 
+gglin1 <- tidy(strict1) %>% mutate(group = ">= 1")
+gglin2 <- tidy(strict2) %>% mutate(group = ">= 2")
+gglin3 <- tidy(strict3) %>% mutate(group = ">= 3")
+gglin4 <- tidy(strict4) %>% mutate(group = ">= 4")
+gglin5 <- tidy(strict5) %>% mutate(group = ">= 5")
+gglin6 <- tidy(strict6) %>% mutate(group = ">= 6") 
+gglin<- rbind(gglin1, gglin2,gglin3,gglin4,gglin5,gglin6)
+#fixed the variables so they plot better
+gglinplot <- gglin %>% filter(term=="Year2016:Treatment")
+gglinplot1 <- gglinplot %>% mutate(value=estimate - qnorm(0.975)*std.error, type = "Confidence Interval")
+gglinplot2 <- gglinplot %>% mutate(value=estimate + qnorm(0.975)*std.error, type = "Confidence Interval")
+gglinplot3 <- gglinplot %>% mutate(value=estimate, type = "Estimate")
+strictggplotfull <- rbind(gglinplot1,gglinplot2,gglinplot3)
+```
+
+```{r}
+#Plot of the treatment effect based on lenient glm model (not exponentiated)
+ggplot(data=results, aes(y=Values, x = Group, shape =type)) + geom_point(size=5) + labs(title = "Estimated Change in Mental Health Scores (Lenient,glm)", y="Treatment Effect",x="Scores Included in Estimation") + theme_bw() + theme(plot.title = element_text(hjust = 0.5)) + scale_shape_manual(values= c(16,4)) + geom_hline(yintercept=0)
 ggsave("results.png")
 
-ggplot(data=factorResults, aes(y=exp(Values), x = Group, shape =type)) + geom_point(size=5) + labs(title = "Estimated Change in Mental Health Scores", y="Treatment Effect",x="Scores Included in Estimation") + theme_bw() + theme(plot.title = element_text(hjust = 0.5)) + scale_shape_manual(values= c(16,4))
-```
+#Plot of the treatment effect based on lenient glm model (exponentiated)
+ggplot(data=factorResults, aes(y=exp(Values), x = Group, shape =type)) + geom_point(size=5) + labs(title = "Estimated Change in Mental Health Scores (Lenient,glm)", y="Treatment Effect",x="Scores Included in Estimation") + theme_bw() + theme(plot.title = element_text(hjust = 0.5)) + scale_shape_manual(values= c(16,4)) + geom_hline(yintercept=1)
 
+#Plot of the treatment effect based on lenient lm model
+ggplot(data=gglinplotfull, aes(y=value, x= group, shape = type)) + geom_point(size=5) + labs(title = "Estimated Change in Mental Health Scores (Lenient,lm)", y="Treatment Effect",x="Scores Included in Estimation") + theme_bw() + theme(plot.title = element_text(hjust = 0.5)) + scale_shape_manual(values= c(4,16)) + geom_hline(yintercept=0)
+
+#Plot of the treatment effect based on strict lm model
+ggplot(data=strictgglinplotfull, aes(y=value, x= group, shape = type)) + geom_point(size=5) + labs(title = "Estimated Change in Mental Health Scores (Strict,lm)", y="Treatment Effect",x="Scores Included in Estimation") + theme_bw() + theme(plot.title = element_text(hjust = 0.5)) + scale_shape_manual(values= c(4,16)) + geom_hline(yintercept=0)
+
+#Plot of the treatment effect based on strict glm model
+ggplot(data=strictggplotfull, aes(y=exp(value), x= group, shape = type)) + geom_point(size=5) + labs(title = "Estimated Change in Mental Health Scores (Strict,glm)", y="Treatment Effect",x="Scores Included in Estimation") + theme_bw() + theme(plot.title = element_text(hjust = 0.5)) + scale_shape_manual(values= c(4,16)) + geom_hline(yintercept=1)
+```
